fixed display number alignment

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ button {
     width: 22rem;
   }
   .display {
-    top: 0.2rem;
+    top: 0.6rem;
   }
   .btn-container {
     display: grid;
